refactor: enhance readability and add documentation to bisection method

--- a/Biseccion.ipynb
+++ b/Biseccion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3226975c",
    "metadata": {},
    "outputs": [
@@ -16,53 +16,75 @@
     }
    ],
    "source": [
-    "import numpy as np  # Importa la librería numpy\n",
+    "import numpy as np  # Import the numpy library\n",
     "\n",
-    "# Definición del método de bisección\n",
-    "def metodo_biseccion(f, a, b, tol=10**(-6), contador_it=0):\n",
-    "    \n",
-    "    # Incrementa el contador de iteraciones al final de la ejecución\n",
-    "    contador_it = contador_it + 1\n",
-    "    #print(contador_it)  # Imprime el número de iteraciones realizadas\n",
-    "    \n",
-    "    # Verifica si el intervalo es adecuado para aplicar el método de bisección\n",
+    "def bisection_method(f, a, b, tol=1e-6, max_iter=1000):\n",
+    "    \"\"\"\n",
+    "    Finds an approximate root of a continuous function f within a given interval [a, b] using the bisection method.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - f (function): The function for which the root is to be found. It should be continuous in [a, b].\n",
+    "    - a (float): The start of the interval.\n",
+    "    - b (float): The end of the interval.\n",
+    "    - tol (float): The tolerance for the root approximation. The algorithm stops when the error is below this value.\n",
+    "    - max_iter (int): The maximum number of iterations to prevent infinite loops if convergence is not reached.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: An approximate value for the root of the function f in the interval [a, b].\n",
+    "    - None: Returns None if no root is found or the maximum number of iterations is reached.\n",
+    "\n",
+    "    Raises:\n",
+    "    - ValueError: If f(a) and f(b) do not have opposite signs, meaning no root is guaranteed in [a, b].\n",
+    "    \"\"\"\n",
+    "    # Verify if the interval is suitable for the bisection method\n",
     "    if f(a) * f(b) > 0:\n",
-    "        print('error')  # Si f(a) y f(b) tienen el mismo signo, no hay raíz \n",
-    "    else:\n",
-    "        # Asigna los valores iniciales de a y b\n",
-    "        a0 = a\n",
-    "        b0 = b\n",
-    "        # Calcula el punto medio del intervalo\n",
+    "        print('Error: The interval is not valid for the bisection method.')\n",
+    "        return None  # Stop execution if there is no sign change\n",
+    "\n",
+    "    # Initialize variables\n",
+    "    a0 = a\n",
+    "    b0 = b\n",
+    "    iteration_counter = 0  # Initialize the iteration counter\n",
+    "\n",
+    "    while iteration_counter < max_iter:\n",
+    "        iteration_counter += 1  # Increment the iteration counter\n",
+    "\n",
+    "        # Calculate the midpoint of the interval\n",
     "        p0 = a0 + (b0 - a0) / 2\n",
-    "        \n",
-    "        # Determina si el punto medio es la raíz\n",
-    "        if abs(f(p0))<10**(-10):\n",
-    "            return p0\n",
-    "        \n",
-    "        # Determina en qué subintervalo continuar la búsqueda\n",
-    "        elif f(a0) * f(p0) < 0:  # Si el signo cambia entre a0 y p0, actualiza b0\n",
-    "            b0 = p0\n",
-    "            error = abs(p0 - a0) / abs(p0)  # Calcula el error relativo\n",
-    "        elif f(b0) * f(p0) < 0:  # Si el signo cambia entre p0 y b0, actualiza a0\n",
-    "            a0 = p0\n",
-    "            error = abs(p0 - b0) / abs(p0)  # Calcula el error relativo\n",
-    "        \n",
-    "        # Si el error es mayor que la tolerancia, llama recursivamente a la función con el nuevo intervalo\n",
-    "        if error > tol:\n",
-    "            return metodo_biseccion(f, a0, b0, tol, contador_it)\n",
     "\n",
-    "    return p0  # Devuelve el valor aproximado de la raíz\n",
+    "        # Check if the midpoint is the root or if the error is acceptable\n",
+    "        if abs(f(p0)) < 1e-10 or (b0 - a0) / 2 < tol:\n",
+    "            print(f'Number of iterations: {iteration_counter}')\n",
+    "            return p0  # Return the approximate root\n",
     "\n",
-    "# Define la función para la cual se buscará la raíz\n",
+    "        # Determine in which subinterval to continue the search\n",
+    "        if f(a0) * f(p0) < 0:\n",
+    "            b0 = p0  # The root is in [a0, p0]\n",
+    "        elif f(p0) * f(b0) < 0:\n",
+    "            a0 = p0  # The root is in [p0, b0]\n",
+    "        else:\n",
+    "            # Case when f(p0) is zero or very close to zero\n",
+    "            print(f'Number of iterations: {iteration_counter}')\n",
+    "            return p0  # Return the exact or approximate root\n",
+    "\n",
+    "    # If the maximum number of iterations is reached without convergence\n",
+    "    print('Error: Maximum number of iterations reached without convergence.')\n",
+    "    return None\n",
+    "\n",
+    "# Define the function for which the root will be searched\n",
     "def f(x):\n",
     "    return np.sqrt(x) - np.cos(x)\n",
     "\n",
-    "# Llama al método de bisección con la función f, intervalo [0,1], tolerancia 10^(-3), y contador inicial en 0\n",
-    "raiz = metodo_biseccion(f, 0, 1, 10**(-16))\n",
+    "# Call the bisection method with the function f, interval [0,1], tolerance 1e-16\n",
+    "root = bisection_method(f, 0, 1, tol=1e-16)\n",
     "\n",
-    "# Imprime el valor de la raíz aproximada y el valor de la función en la raíz\n",
-    "print(raiz)\n",
-    "print(abs(f(raiz)))\n"
+    "# Check if a root was found and print it\n",
+    "if root is not None:\n",
+    "    print(f'Approximate root: {root}')\n",
+    "    print(f'Value of f(root): {f(root)}')\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
