fix: correct and refactor fixed-point method for numerical stability

--- a/PuntoFijo.ipynb
+++ b/PuntoFijo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3226975c",
    "metadata": {},
    "outputs": [
@@ -17,35 +17,52 @@
     }
    ],
    "source": [
-    "import numpy as np  # Importa la librería numpy\n",
+    "import numpy as np  # Import the numpy library for numerical operations\n",
     "\n",
-    "# Definición del método de bisección\n",
-    "def metodo_puntofijo(g, p0, tol, max_iter):\n",
-    "    \n",
+    "# Definition of the fixed-point method\n",
+    "def fixed_point_method(g, p0, tol=1e-6, max_iter=100):\n",
+    "    \"\"\"\n",
+    "    Implements the fixed-point iteration method to find a fixed point of the function g.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - g: Function for which the fixed point is sought.\n",
+    "    - p0: Initial approximation.\n",
+    "    - tol: Tolerance for the convergence criterion.\n",
+    "    - max_iter: Maximum number of iterations allowed.\n",
+    "\n",
+    "    Returns:\n",
+    "    - p: Approximation of the fixed point.\n",
+    "    - None: If it does not converge within the maximum number of iterations.\n",
+    "    \"\"\"\n",
     "    p = p0\n",
     "    for n in range(1, max_iter + 1):\n",
     "        p_next = g(p)\n",
-    "        \n",
-    "        # Verificamos si la diferencia es menor que la tolerancia\n",
-    "        if abs(p_next - p)/abs(p_next) < tol:\n",
+    "        # Check if the difference is less than the tolerance\n",
+    "        if abs(p_next - p) < tol:\n",
+    "            print(f\"Converged in {n} iterations.\")\n",
     "            return p_next\n",
     "        p = p_next\n",
-    "    \n",
-    "    # Si no converge dentro del número máximo de iteraciones\n",
+    "    # If it does not converge within the maximum number of iterations\n",
+    "    print(f\"Did not converge after {max_iter} iterations.\")\n",
     "    return None\n",
     "\n",
-    "\n",
-    "# Define la función para la cual se buscará el punto fijo\n",
+    "# Define the function for which the fixed point will be sought\n",
     "def g(x):\n",
-    "    return 1/2*np.sqrt(10-x**3)\n",
+    "    return 0.5 * np.sqrt(10 - x**3)\n",
     "\n",
-    "# Llama al método de punto fijo \n",
-    "pfijo = metodo_puntofijo(g, 0, 10**(-16), 100)\n",
+    "# Appropriate initial value based on the analysis\n",
+    "p0 = 1.5\n",
     "\n",
-    "# Imprime el valor de la raíz aproximada y el valor de la función en la raíz\n",
-    "print(pfijo)\n",
-    "print(g(pfijo))\n",
-    "print(abs(pfijo-g(pfijo)))\n"
+    "# Call the fixed-point method\n",
+    "fixed_point = fixed_point_method(g, p0, tol=1e-6, max_iter=100)\n",
+    "\n",
+    "# Check if a fixed point was found and display the results\n",
+    "if fixed_point is not None:\n",
+    "    print(\"Approximate fixed point:\", fixed_point)\n",
+    "    print(\"g(fixed point):\", g(fixed_point))\n",
+    "    print(\"Absolute error:\", abs(fixed_point - g(fixed_point)))\n",
+    "else:\n",
+    "    print(\"No fixed point found.\")"
    ]
   },
   {
