refactor: Improve Lagrange interpolation function: added validation, tolerance handling, and refactoring for clarity

--- a/interpolation/lagrange_interpolation.ipynb
+++ b/interpolation/lagrange_interpolation.ipynb
@@ -7,35 +7,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lagrange_interpolation(x, points):\n",
+    "def lagrange_basis(x, i, points):\n",
     "    \"\"\"\n",
-    "    Perform Lagrange's interpolation to compute the value of the interpolating polynomial at a given point.\n",
-    "\n",
+    "    Computes the Lagrange basis polynomial ℓᵢ(x) for the i-th interpolation node.\n",
+    "    \n",
     "    Parameters:\n",
-    "    - x: The point at which to evaluate the interpolating polynomial.\n",
-    "    - points: A list of tuples [(x0, y0), (x1, y1), ..., (xn, yn)] representing the interpolation points.\n",
+    "    - x (float): The point at which ℓᵢ(x) will be evaluated.\n",
+    "    - i (int): The index of the interpolation node for which we compute ℓᵢ(x).\n",
+    "    - points (list of tuples): A list of (x_j, y_j) nodes for interpolation.\n",
     "\n",
     "    Returns:\n",
-    "    - polynomial_value: The value of the interpolating polynomial at x.\n",
+    "    - L (float): The value of the Lagrange basis polynomial ℓᵢ(x).\n",
     "    \"\"\"\n",
+    "    xi, _ = points[i]\n",
+    "    L = 1.0\n",
+    "\n",
+    "    for j, (xj, _) in enumerate(points):\n",
+    "        if j != i:\n",
+    "            # Check for a potential zero denominator (if xi == xj)\n",
+    "            if abs(xi - xj) < 1e-15:\n",
+    "                raise ValueError(f\"Duplicate x-values detected: x_{i} = x_{j} = {xi}\")\n",
+    "\n",
+    "            # Multiply by the factor (x - xj) / (xi - xj)\n",
+    "            L *= (x - xj) / (xi - xj)\n",
+    "\n",
+    "    return L\n",
+    "\n",
+    "\n",
+    "def lagrange_interpolation(x, points, tol=1e-12):\n",
+    "    \"\"\"\n",
+    "    Performs Lagrange interpolation to compute the value of the interpolating polynomial at a given point x.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - x (float): The point at which to evaluate the interpolating polynomial.\n",
+    "    - points (list of tuples): A list of (x_i, y_i) nodes for interpolation, \n",
+    "                               e.g., [(x0, y0), (x1, y1), ..., (xn, yn)].\n",
+    "    - tol (float): A tolerance to determine if x is \"close enough\" to an interpolation node.\n",
+    "\n",
+    "    Returns:\n",
+    "    - polynomial_value (float): The value of the Lagrange interpolating polynomial at x.\n",
+    "    \"\"\"\n",
+    "    # 1. Basic validations\n",
+    "    if not points:\n",
+    "        raise ValueError(\"The list of points cannot be empty.\")\n",
+    "\n",
+    "    if len(points) == 1:\n",
+    "        # If there is only one point, the interpolating polynomial is constant\n",
+    "        return points[0][1]\n",
     "    \n",
-    "    # Get the number of data points\n",
+    "    # 2. Quick check: if x is (within tol) equal to any node, return the corresponding y-value\n",
+    "    for (xi, yi) in points:\n",
+    "        if abs(x - xi) < tol:\n",
+    "            return yi\n",
+    "\n",
+    "    # 3. Compute the Lagrange interpolation polynomial\n",
+    "    polynomial_value = 0.0\n",
     "    k = len(points)\n",
     "\n",
-    "    # Initialize the value of the interpolation polynomial at x\n",
-    "    polynomial_value = 0\n",
-    "\n",
-    "    # Loop through each point to calculate its contribution to the polynomial\n",
     "    for i in range(k):\n",
-    "        polynomial_term = 1\n",
-    "        # Calculate the product of fractions forming the polynomial term\n",
-    "        for j in range(k):\n",
-    "            if i != j:\n",
-    "                polynomial_term *= (x - points[j][0]) / (points[i][0] - points[j][0])\n",
-    "        # Multiply the polynomial term by the corresponding y-value\n",
-    "        polynomial_value += points[i][1] * polynomial_term # Add the term to the polynomial\n",
-    "        \n",
-    "    return polynomial_value # Return the result\n",
+    "        # Compute the Lagrange basis ℓᵢ(x)\n",
+    "        Li = lagrange_basis(x, i, points)\n",
+    "        # Add its contribution: yᵢ * ℓᵢ(x)\n",
+    "        polynomial_value += points[i][1] * Li\n",
+    "    \n",
+    "    return polynomial_value\n",
     "    "
    ]
   },
@@ -55,18 +90,19 @@
    ],
    "source": [
     "# Example usage\n",
-    "x = 1.5\n",
-    "points = [(1.0, 0.7651977), (1.3, 0.6200860), (1.6, 0.4554022), (1.9, 0.2818186), (2.2, 0.1103623)]\n",
-    "print(lagrange_interpolation(x, points))"
+    "if __name__ == \"__main__\":\n",
+    "    x_eval = 1.5\n",
+    "    points_example = [\n",
+    "        (1.0, 0.7651977),\n",
+    "        (1.3, 0.6200860),\n",
+    "        (1.6, 0.4554022),\n",
+    "        (1.9, 0.2818186),\n",
+    "        (2.2, 0.1103623)\n",
+    "    ]\n",
+    "\n",
+    "    result = lagrange_interpolation(x_eval, points_example)\n",
+    "    print(\"Interpolated value at x =\", x_eval, \":\", result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7520d42-bca7-42b6-88be-431d9a068de0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
